--- a/index.html
+++ b/index.html
@@ -1,33 +1,30 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Minha Linktree</title>
     <link rel="stylesheet" href="style.css">
+    <title>Link Tree</title>
 </head>
 <body>
     <div>
-        <img src="WhatsApp Image 2025-03-19 at 18.08.31.jpg" alt="Foto de Perfil">
+        <img src="foto2.jpeg" alt="">
+
         <h1>Nicolas Henrique</h1>
-        <strong>São Paulo,Brasil</strong>
-        <p>"Estudante do Unasp."</p>
+
+        <strong>São Paulo, Brasil</strong>
+
+        <p>"Estudante do Unasp Ti 🖥️ "</p>
+
         <ul>
             <li>
                 <a href="https://github.com/nicolas09macedoz" target="_blank">GitHub  🖥️</a>
             </li>
-            
             <li>
-                <a href="httpswww.instagram.commacedozz" target="_blank">Instagram  🌟</a>
+                <a href="https://www.instagram.com/macedozz___?igsh=bGNmbnI4Z2lwejc4" target="_blank">Instagram  ✨</a>
             </li>
-
-            <li>
-                <a href="httpsx.commaced0z" target="_blank">Twitter/X</a>
-            </li>
-
-
+                <a href="https://x.com/maced0z" target="_blank"">Twitter/X  🐦</a>
         </ul>
     </div>
-</div>
 </body>
 </html>
